--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
+    "@hookform/resolvers": "^3.3.4",
     "next": "14.1.3",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.1.0",
-    "yarn": "^1.22.22"
+    "yarn": "^1.22.22",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "eslint": "^8",
