feat: add homepage to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "monomito-filmes",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://monomitofilmes.com.br",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
