--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,4 @@ jobs:
           server: ftp.nodejs36f02.kinghost.net
           username: monomitofilmes
           password: Huehuebr12
-          server-dir: /home/monomitofilmes/www/
+          server-dir: /
