--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,9 @@ jobs:
           server-dir: "/home/monomitofilmes/www/"
           local-dir: "./"
           exclude: |
-            public/*
             **/.git*
             **/.github*
+            **/node_modules*
+            .gitignore
+            .editorconfig
+            ...
