--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
           local-dir: "./"
           exclude: |
             **/.git*
+            **/.git*/**
             **/.github*
             **/node_modules*
             .gitignore
