--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
             **/.git*/**
             **/.github*
             **/node_modules*
-            public/*
+            **/public/**
             .gitignore
             .editorconfig
             ...
