--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
           username: monomitofilmes
           password: Huehuebr12
           server-dir: "/home/monomitofilmes/www/"
-          local-dir: "./"
+          local-dir: "./out"
           exclude: |
             **/.git*
             **/.git*/**
