ignore next all

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,5 @@ jobs:
             **/.git*
             **/.github*/
             **/node_modules*/
-            **/_next**
+            **/out/_next/
+            **/out/_next/**
