--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Deploy Next.js Static
+name: Deploy contato.html Only
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build_and_deploy:
+  deploy_contact_html:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout do repositório
@@ -18,39 +18,28 @@ jobs:
       - name: Build + Export
         run: npm run build
 
-      - name: Listar arquivos (opcional)
-        run: ls -R out
+      - name: Criar pasta temporária e mover contato.html
+        run: |
+          mkdir -p out_temp
+          cp ./out/contato.html out_temp/
 
-      # 1) Deploy apenas dos arquivos de texto / HTML
-      - name: Deploy Text Files
+      - name: Listar arquivos na pasta temporária (debug)
+        run: ls -R out_temp
+
+      - name: Deploy contato.html
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
           keepalive: true
-          timeout: 180000 # Increased timeout
+          timeout: 180000
           server: ftp.monomitofilmes.com.br
           username: monomitofilmes
           password: Huehuebr12
           protocol: ftp
           port: 21
           force: true
-          concurrent-uploads: 1 # Reduced uploads to prevent errors
-          passive: true # Use active mode
-          auto-retry: true # Retry on failure
+          concurrent-uploads: 1
+          passive: true
+          auto-retry: true
           disable-verification: true
           server-dir: "/home/monomitofilmes/www/"
-          local-dir: "./out/contato.html"
-          exclude: |
-            **/*.png
-            **/*.jpg
-            **/*.jpeg
-            **/*.gif
-            **/*.svg
-            **/*.mp4
-            **/*.mov
-            **/.git*
-            **/.github*/
-            **/node_modules*/
-            _next/
-            _next/**
-            404
-            404.html
+          local-dir: "./out_temp/" # ⬅ Now using a folder
